# SpotifyTools-CLI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  client.py  config.py  duplicates.py  use_cli.py
src/spotify_tools/: __init__.py  client.py  duplicates.py  explicit.py  normalize.py  tops.py  use_cli.py
src/spotify_tools/auth/: get_user_token.py  make_dev_cert.py  server.py  user_token_from_refresh.py
tests/: test_duplicates.py  test_normalize.py
