[project]
name = "spotify-tools"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "requests==2.32.5",
    "flask==3.1.2",
    "cryptography==45.0.7",
    "python-dotenv==1.1.1",
    "click==8.2.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
